--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
     <section class="graysection shadow p-3 mb-5 rounded ">
         <div class="container mt-5 pt-5">
             <div class="row justify-content-center">
-                <div class="col-3">
+                <div class="col-1">
 
                 </div>
-                <div class="col-4">
+                <div class="col-6">
                     <h1>Computers, Phones Tablets & Game Consoles </h1>
                     <ul>
-                        <li>Lorem Ipsum</li>
-                        <li> Dolor sit Amet </li>
-                        <li>consectetur adipiscing elit.</li>
-                        <li>Nulla quam velit</li>
-                        <li>omare accumsan, bladit sed diam.</li>
+                        <li class="my-2">We provide services quickly.</li>
+                        <li class="my-2"> We fix Computers, Laptops, Phones, Game Consoles and much more! </li>
+                        <li class="my-2">consectetur adipiscing elit.</li>
+                        <li class="my-2">Nulla quam velit</li>
+                        <li class="my-2">omare accumsan, bladit sed diam.</li>
                     </ul>
                 </div>
                 <div class="col-2">
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col-md-6">
 
-                <h3>Laptop Repairs</h3>
+                <h3>Laptops</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ad soluta cupiditate vel commodi veritatis fugit ipsa mollitia quibusdam provident reprehenderit saepe itaque, quidem obcaecati aut inventore sit quas dignissimos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At amet quos possimus, architecto ducimus, consequuntur ab ullam, praesentium omnis hic ex doloribus obcaecati sapiente aliquam reiciendis aliquid dolor atque perferendis.</p>
 
             </div>
