--- a/About.html
+++ b/About.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Computer Centre Aughnacloy</title>
+    <title>About Us | Computer Centre Aughnacloy</title>
 </head>
 
 <body>
@@ -38,76 +38,28 @@
         </nav>
 
     </header>
-    <section class="graysection">
-        <div class="container mt-5 pt-5">
-            <div class="row justify-content-center">
-                <div class="col-3">
 
-                </div>
-                <div class="col-4">
-                    <h1>Computers, Phones Tablets & Game Consoles </h1>
-                    <ul>
-                        <li>Lorem Ipsum</li>
-                        <li> Dolor sit Amet </li>
-                        <li>consectetur adipiscing elit.</li>
-                        <li>Nulla quam velit</li>
-                        <li>omare accumsan, bladit sed diam.</li>
-                    </ul>
-                </div>
-                <div class="col-2">
-                    <img class="sideimg" src="images/Monitor_Index.png" alt="">
-                </div>
-                <div class="col-3">
+    <section class="mt-5 pt-5">
 
-                </div>
-            </div>
+
+        <div>
+            <h1 class="mb-5 text-center">About us</h1>
         </div>
-    </section>
-    <h2 class="text-center my-5">Have problems with your website?</h2>
 
-    <section class="container">
-        <div class="row">
-            <div class="col-md-6">
+        <div class="container">
+            <div class="row">
+                <img class="col-md-4 size350" src="https://via.placeholder.com/350" alt="">
+                <p class="col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius asperiores deleniti, itaque perferendis delectus mollitia ab architecto molestiae, odio atque corrupti et magni magnam voluptatum! Dolore incidunt, placeat at obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quam sed repellendus ipsum illum nihil fugiat dolorum corporis pariatur obcaecati harum, quae, deleniti et eaque minus eius consectetur veniam dignissimos!</p>
 
-                <h3>Laptop Repairs</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ad soluta cupiditate vel commodi veritatis fugit ipsa mollitia quibusdam provident reprehenderit saepe itaque, quidem obcaecati aut inventore sit quas dignissimos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At amet quos possimus, architecto ducimus, consequuntur ab ullam, praesentium omnis hic ex doloribus obcaecati sapiente aliquam reiciendis aliquid dolor atque perferendis.</p>
-
-            </div>
-
-            <div class="col-md-6">
-
-                <h3>Phones</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ea provident maiores impedit, excepturi consectetur. Cumque maiores excepturi libero! Error architecto ullam voluptatibus nobis non deleniti voluptatum ratione quaerat tempore!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, maiores! Porro, consectetur reiciendis voluptatem. Placeat, numquam corporis? Deleniti molestias dolor rem. Maiores non dolores recusandae provident, ad, maxime quos officia!</p>
-
-            </div>
-        </div>
-    </section>
-
-    <section class="container mt-4">
-        <div class="row">
-            <div class="col-md-6">
-
-                <h3>Tablets</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt dolores ex ut veniam optio consequuntur quos cum. Perferendis id beatae, facilis, ipsa officia accusamus praesentium libero nostrum magni inventore quis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, incidunt. Aperiam at sed sapiente in numquam, animi nisi, sequi odio, quaerat distinctio perspiciatis aut quam quibusdam est illo ut facilis! </p>
-
-            </div>
-
-            <div class="col-md-6">
-
-
-                <h3>Game Consoles</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ad soluta cupiditate vel commodi veritatis fugit ipsa mollitia quibusdam provident reprehenderit saepe itaque, quidem obcaecati aut inventore sit quas dignissimos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At amet quos possimus, architecto ducimus, consequuntur ab ullam, praesentium omnis hic ex doloribus obcaecati sapiente aliquam reiciendis aliquid dolor atque perferendis.</p>
-
+                <img class="mt-3 col-md-4 size250" src="https://via.placeholder.com/250" alt="">
+                <p class="mt-3 col-md-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius asperiores deleniti, itaque perferendis delectus mollitia ab architecto molestiae, odio atque corrupti et magni magnam voluptatum! Dolore incidunt, placeat at obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quam sed repellendus ipsum illum nihil fugiat dolorum corporis pariatur obcaecati harum, quae, deleniti et eaque minus eius consectetur veniam dignissimos!</p>
             </div>
         </div>
     </section>
 
 
 
-
-
-
-    <footer class="MyBG">
+    <footer class="MyBG mt-5">
         <h6 class="my-0 py-0 text-light text-center"> © Copyright 2005 - 2019 </h6>
     </footer>
 
