--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin|Roboto|Rubik" rel="stylesheet" />
 
 
-    <title>Computer Centre Aughnacloy</title>
+    <title>Home Page | Computer Centre Aughnacloy</title>
 </head>
 
 <body>
@@ -110,7 +110,7 @@
 
 
 
-    <footer class="MyBG">
+    <footer class="MyBG mt-5">
         <h6 class="my-0 py-0 text-light text-center"> © Copyright 2005 - 2019 </h6>
     </footer>
 
