--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light MyBG fixed-top">
 
-            <a href="index.html" class="navbar-brand"> <img src="images/logo.png"> </a>
+            <a href="index.html" class="navbar-brand"> <img src="/images/logo.png"> </a>
             <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse " id="nav">
                 <ul class="navbar-nav">
@@ -58,7 +58,7 @@
                     </ul>
                 </div>
                 <div class="col-2">
-                    <img class="sideimg" src="images/Monitor_Index.png" alt="">
+                    <img class="sideimg" src="/images/Monitor_Index.png" alt="">
                 </div>
                 <div class="col-3">
 
