--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <!-- google's fonts -->
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin|Roboto|Rubik" rel="stylesheet" />
 
-
     <title>Home Page | Computer Centre Aughnacloy</title>
+
+
 </head>
 
-<body>
 
+<body>
     <header>
         <nav class="navbar navbar-expand-md navbar-light MyBG fixed-top">
 
-            <a href="index.html" class="navbar-brand"> <img src="/images/logo.png"> </a>
+            <a href="index.html" class="navbar-brand"> <img src="images/logo.png" alt="logo"> </a>
             <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse " id="nav">
                 <ul class="navbar-nav">
@@ -38,7 +39,13 @@
                 </ul>
 
             </div>
+
+            <div>
+                <p class="jstext font-changer">FONT SIZE: <span class="jstext js-font-decrease">A</span> <span class="jstext js-font-normal">A</span> <span class="jstext js-font-increase">A</span></p>
+            </div>
+
         </nav>
+
 
     </header>
     <section class="graysection shadow p-3 mb-5 rounded ">
@@ -58,7 +65,7 @@
                     </ul>
                 </div>
                 <div class="col-2">
-                    <img class="sideimg" src="/images/Monitor_Index.png" alt="">
+                    <img class="sideimg" src="images/Monitor_Index.png" alt="Monitor">
                 </div>
                 <div class="col-3">
 
@@ -73,14 +80,13 @@
             <div class="col-md-6">
 
                 <h3>Laptops</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ad soluta cupiditate vel commodi veritatis fugit ipsa mollitia quibusdam provident reprehenderit saepe itaque, quidem obcaecati aut inventore sit quas dignissimos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At amet quos possimus, architecto ducimus, consequuntur ab ullam, praesentium omnis hic ex doloribus obcaecati sapiente aliquam reiciendis aliquid dolor atque perferendis.</p>
+                <p>Laptop problems are notoriously hard to diagnose, let alone fix – so why not bring your kit in-store and let our experts handle the tough stuff? We’ll run a free in-store diagnostic to figure out exactly what’s wrong with your laptop, then give you a no-obligatio n quote for the repair.If it’s a software issue, we’ll fix it in-store – usually the very same day. For hardware problems, we’ll do everything we can to repair it there and then, but if necessary we’ll send it to our National Repair Centre for some expert attention. </p>
 
             </div>
 
             <div class="col-md-6">
-
                 <h3>Phones</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ea provident maiores impedit, excepturi consectetur. Cumque maiores excepturi libero! Error architecto ullam voluptatibus nobis non deleniti voluptatum ratione quaerat tempore!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, maiores! Porro, consectetur reiciendis voluptatem. Placeat, numquam corporis? Deleniti molestias dolor rem. Maiores non dolores recusandae provident, ad, maxime quos officia!</p>
+                <p>Our in-house repair service offers valued customers an opportunity to drop of their broken handsets to get them repaired while they nip out for a coffee or lunch. Our services entail the installation of new lcds, software, unlocks and fixing of popular problems that one may encounter with a handset. Our qualified technicians may advise a handset to be booked in for a scheduled repair depending on the unique situation or malfunction but we do aim to complete repairs in an acceptable time frame suitable for the fault in hand on the device.</p>
 
             </div>
         </div>
@@ -110,9 +116,11 @@
 
 
 
+
     <footer class="MyBG mt-5">
         <h6 class="my-0 py-0 text-light text-center"> © Copyright 2005 - 2019 </h6>
     </footer>
+
 
 
 
@@ -121,6 +129,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="js.js"></script>
+    
 </body>
 
 </html>
