--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light MyBG fixed-top">
 
-            <a href="index.html" class="navbar-brand"> <img src="images/logo.png" alt="logo"> </a>
+            <a href="index.html" class="navbar-brand"> <img src="Images/logo.png" alt="logo"> </a>
             <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse " id="nav">
                 <ul class="navbar-nav">
@@ -65,7 +65,7 @@
                     </ul>
                 </div>
                 <div class="col-2">
-                    <img class="sideimg" src="images/Monitor_Index.png" alt="Monitor">
+                    <img class="sideimg" src="Images/Monitor_Index.png" alt="Monitor">
                 </div>
                 <div class="col-3">
 
