Video, and Logo Fix

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light MyBG fixed-top">
 
-            <a href="index.html" class="navbar-brand"> <img src="images/logo.png" alt="logo"> </a>
+            <a href="index.html" class="navbar-brand"> <img src="Images/logo.png" alt="logo"> </a>
             <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse " id="nav">
                 <ul class="navbar-nav">
@@ -54,14 +54,15 @@
                 <div class="col-1">
 
                 </div>
+
                 <div class="col-6">
-                    <h1>Computers, Phones Tablets & Game Consoles </h1>
+                    <h1>We Repair: </h1>
                     <ul>
-                        <li class="my-2">We provide services quickly.</li>
-                        <li class="my-2"> We fix Computers, Laptops, Phones, Game Consoles and much more! </li>
-                        <li class="my-2">consectetur adipiscing elit.</li>
-                        <li class="my-2">Nulla quam velit</li>
-                        <li class="my-2">omare accumsan, bladit sed diam.</li>
+                        <li class="my-2">Computers</li>
+                        <li class="my-2">Laptops </li>
+                        <li class="my-2">Tables</li>
+                        <li class="my-2">Game Consoles &</li>
+                        <li class="my-2"> Much More</li>
                     </ul>
                 </div>
                 <div class="col-2">
@@ -111,6 +112,13 @@
         </div>
     </section>
 
+    <section class="container text-center">
+
+        <video alt="video" autoplay loop width="700" height="250">
+            <source src="/Images/Advertisement.mp4" type="video/mp4"> </video>
+
+    </section>
+
 
 
 
@@ -131,7 +139,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <script type="text/javascript" src="js.js"></script>
-    
+
 </body>
 
 </html>
