--- a/Pinfo1.html
+++ b/Pinfo1.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light MyBG fixed-top">
 
-            <a href="index.html" class="navbar-brand"> <img src="images/logo.png" alt="logo"> </a>
+            <a href="index.html" class="navbar-brand"> <img src="Images/logo.png" alt="logo"> </a>
             <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse " id="nav">
                 <ul class="navbar-nav">
