Index video fix

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <section class="container text-center">
 
         <video alt="video" autoplay loop width="700" height="250">
-            <source src="/Images/Advertisement.mp4" type="video/mp4"> </video>
+            <source src="Images/Advertisement.mp4" type="video/mp4"> </video>
 
     </section>
 
