--- a/Pinfo1.html
+++ b/Pinfo1.html
@@ -52,8 +52,17 @@
             </div>
 
             <div class="ml-3 col-5">
-                <h2>Samsung Galaxy 10</h2>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod sed, voluptatum hic, aut at neque officiis odit facilis itaque. Omnis ea id reprehenderit aut sint ut quo repellat minima excepturi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quos quisquam consequatur voluptatibus. Odit, veritatis, ex? Autem odit, mollitia, ipsa hic ipsam delectus possimus nobis architecto natus aperiam itaque soluta. </p>
+                <h2>Samsung Galaxy 10 Plus</h2>
+                <p> Like its name would suggest, there are so many pluses to the S10+. Its edge-to-edge 6.4-inch display makes watching content a bezel-less dream – and its ground-breaking TrueVision triple camera takes pictures like never before. </p>
+
+                <ul>
+                    <h3> Galaxy S10+'s Features</h3>
+                    <li>6.4-inch Widescreen Quad HD display</li>
+                    <li>12MP + 12MP + 16MP triple lens camera</li>
+                    <li>Wireless power sharing</li>
+                    <li>Ultrasonic fingerprint scanner</li>
+                    <li>Available in Prism White, Prism Black, Prism Green, Ceramic White and Ceramic Black</li>
+                </ul>
 
             </div>
 
