--- a/Pinfo2.html
+++ b/Pinfo2.html
@@ -54,8 +54,17 @@
             </div>
 
             <div class="ml-3 col-5">
-                <h2>Huawei P</h2>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod sed, voluptatum hic, aut at neque officiis odit facilis itaque. Omnis ea id reprehenderit aut sint ut quo repellat minima excepturi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quos quisquam consequatur voluptatibus. Odit, veritatis, ex? Autem odit, mollitia, ipsa hic ipsam delectus possimus nobis architecto natus aperiam itaque soluta. </p>
+                <h2>Huawei P Smart Plus</h2>
+                <p> Even smarter? Even though the Huawei P Smart (2019) is already in stores, the Chinese manufacturer has just released the Plus version of its predecessor at what could prove to be a bargain price. The Plus model has improved internals and a larger screen, while it bears a greater resemblance to its successor than its stablemate. </p>
+
+                <ul>
+                    <h3> Huawei P Smart Plus's Features</h3>
+                    <li>Graphics adapter:ARM Mali-G51 MP4</li>
+                    <li>Memory: 4096 MB</li>
+                    <li>Display: 6.3 inch 19.5:9, 2340 x 1080 pixel 409 PPI, Capacitive touchscreen, IPS / LTPS</li>
+                    <li>Storage: 64 GB eMMC Flash</li>
+                    <li>Weight: 169 g ( = 5.96 oz / 0.37 pounds), Power Supply: 60 g ( = 2.12 oz / 0.13 pounds)</li>
+                </ul>
 
             </div>
 
