--- a/Pinfo3.html
+++ b/Pinfo3.html
@@ -54,8 +54,16 @@
             </div>
 
             <div class="ml-3 col-5">
-                <h2>Iphone X</h2>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod sed, voluptatum hic, aut at neque officiis odit facilis itaque. Omnis ea id reprehenderit aut sint ut quo repellat minima excepturi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quos quisquam consequatur voluptatibus. Odit, veritatis, ex? Autem odit, mollitia, ipsa hic ipsam delectus possimus nobis architecto natus aperiam itaque soluta. </p>
+                <h2>iPhone X</h2>
+                <p> iPhone X is the tenth anniversary smartphone from Apple, and it’s brimming with incredible specs, including an edge-to-edge 5.8-inch Super Retina display and intelligent Face ID security. </p>
+
+                <ul>
+                    <h3> iPhone X's Features</h3>
+                    <li>5.8-inch Super Retina display</li>
+                    <li>12MP dual lens camera</li>
+                    <li>64GB or 256GB internal storage</li>
+                    <li>Available in space grey, and silver</li>
+                </ul>
 
             </div>
 
