--- a/Pinfo4.html
+++ b/Pinfo4.html
@@ -54,8 +54,17 @@
             </div>
 
             <div class="ml-3 col-5">
-                <h2>Xiaomi Mi 9</h2>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod sed, voluptatum hic, aut at neque officiis odit facilis itaque. Omnis ea id reprehenderit aut sint ut quo repellat minima excepturi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quos quisquam consequatur voluptatibus. Odit, veritatis, ex? Autem odit, mollitia, ipsa hic ipsam delectus possimus nobis architecto natus aperiam itaque soluta. </p>
+                <h2>Xiaomi mi 9</h2>
+                <p> The Xiaomi Mi 9 is a fantastic all-round device, offering many of the bells and whistles of high-end phones but without the price tag. </p>
+
+                <ul>
+                    <h3> Xiaomi mi 9's Features</h3>
+                    <li>Dimensions: 157.5 x 74.7 x 7.6 mm (6.20 x 2.94 x 0.30 in</li>
+                    <li>Weight: 173 g (6.10 oz)</li>
+                    <li>Display: Super AMOLED capacitive touchscreen, 16M colors, 1080 x 2340 pixels, 19.5:9 ratio (~403 ppi density) </li>
+                    <li>Chipset: Qualcomm SDM855 Snapdragon 855 (7 nm)</li>
+                    <li>Storage: 64/128GB</li>
+                </ul>
 
             </div>
 
