--- a/Products.html
+++ b/Products.html
@@ -64,13 +64,13 @@
             <div class="text-center col-md-6 col-lg-3 phone ">
                 <img src="Images/sgalax10.png" alt="phone1">
                 <a href="Pinfo1.html"><button class="btn"> Info</button></a>
-                <h5 class="mt-1"> Samsung Galaxy 10</h5>
+                <h5 class="mt-1"> Samsung Galaxy 10+</h5>
             </div>
 
             <div class="text-center col-md-6 col-lg-3 phone ">
                 <img src="Images/huaweiPpng.png" alt="phone2">
                 <a href="Pinfo2.html"><button class="btn">Info</button></a>
-                <h5 class="mt-1"> Huawei P</h5>
+                <h5 class="mt-1"> Huawei P Smart Plus</h5>
             </div>
 
             <div class="text-center col-md-6 col-lg-3 phone ">
