--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </ul>
                 </div>
                 <div class="col-2">
-                    <img class="sideimg" src="Images/Monitor_Index.png" alt="Monitor">
+                    <img class="sideimg" src="images/Monitor_Index.png" alt="Monitor">
                 </div>
                 <div class="col-3">
 
@@ -81,7 +81,8 @@
             <div class="col-md-6">
 
                 <h3>Laptops</h3>
-                <p>Laptop problems are notoriously hard to diagnose, let alone fix – so why not bring your kit in-store and let our experts handle the tough stuff? We’ll run a free in-store diagnostic to figure out exactly what’s wrong with your laptop, then give you a no-obligatio n quote for the repair.If it’s a software issue, we’ll fix it in-store – usually the very same day. For hardware problems, we’ll do everything we can to repair it there and then, but if necessary we’ll send it to our National Repair Centre for some expert attention. </p>
+                <p>Laptop problems are notoriously hard to diagnose, let alone fix – so why not bring your kit in-store and let our experts handle the tough stuff? We’ll run a free in-store diagnostic to figure out exactly what’s wrong with your laptop, then give you a no-obligation quote for the repair.
+                If it’s a software issue, we’ll fix it in-store – usually the very same day. For hardware problems, we’ll do everything we can to repair it there and then, but if necessary we’ll send it to our National Repair Centre for some expert attention. </p>
 
             </div>
 
@@ -98,7 +99,7 @@
             <div class="col-md-6">
 
                 <h3>Tablets</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt dolores ex ut veniam optio consequuntur quos cum. Perferendis id beatae, facilis, ipsa officia accusamus praesentium libero nostrum magni inventore quis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, incidunt. Aperiam at sed sapiente in numquam, animi nisi, sequi odio, quaerat distinctio perspiciatis aut quam quibusdam est illo ut facilis! </p>
+                <p>Tablets are fragile and powerful devices. While you may want to make a DIY project out of fixing your tablet, it is probably a better idea to let professional Tablet Repairs services handle your device. They are equipped with the tools and experience needed in repairing high-powered and technical devices such as tablets. Avoiding any further damage should always be your first priority when dealing with Tablet Repairs. We are highly skilled at diagnosing and repairing every brand of tablet. From a simple screen replacement to a major motherboard operation, we do it all! </p>
 
             </div>
 
@@ -106,7 +107,7 @@
 
 
                 <h3>Game Consoles</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ad soluta cupiditate vel commodi veritatis fugit ipsa mollitia quibusdam provident reprehenderit saepe itaque, quidem obcaecati aut inventore sit quas dignissimos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At amet quos possimus, architecto ducimus, consequuntur ab ullam, praesentium omnis hic ex doloribus obcaecati sapiente aliquam reiciendis aliquid dolor atque perferendis.</p>
+                <p>We provide an electronic game console repairs service for IPhones, iPad, Sony PlayStation ,Psp, Nintendo Wii u and Switch, 3Ds, 2Ds, Ps Vita, Xbox One  360, PC and Laptops . With almost twenty years experience with electronics, we can repair almost any fault you may encounter with your console.</p>
 
             </div>
         </div>
@@ -114,8 +115,8 @@
 
     <section class="container text-center">
 
-        <video alt="video" autoplay loop width="700" height="250">
-            <source src="/Images/Advertisement.mp4" type="video/mp4"> </video>
+        <video autoplay loop width="700" height="250">
+            <source src="Images/Advertisement.mp4" type="video/mp4"> </video>
 
     </section>
 
